mongodb-service.yaml
# mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: xgboost-service
spec:
  type: ExternalName
  externalName: 10.108.0.15
  ports:
    - port: 27017
      targetPort: 27017
---
# This endpoint ensures the service points to your specific MongoDB instance
apiVersion: v1
kind: Endpoints
metadata:
  name: mongodb
  namespace: xgboost-service
subsets:
  - addresses:
      - ip: 10.108.0.15
    ports:
      - port: 27017
