xgboost-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xgboost-api-deployment
  namespace: xgboost-service
spec:
  replicas: 3  # You can adjust the number of replicas if needed
  selector:
    matchLabels:
      app: xgboost-api
  template:
    metadata:
      labels:
        app: xgboost-api
    spec:
      containers:
      - name: xgboost-api
        image: dianazawislak/xgboost-api:latest  # Use the new image you created
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: "/mnt/block_storage"  # Ensure this matches your mounted volume path
          name: xgboost-model-storage
      volumes:
      - name: xgboost-model-storage
        persistentVolumeClaim:
          claimName: xgboost-model-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: xgboost-api-service
  namespace: xgboost-service
spec:
  selector:
    app: xgboost-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer  # Expose the API with a load balancer (optional for external access)
